# RustOpengGLtest

./: Cargo.toml  README.md  test  test.world
lib/gl/: Cargo.toml
lib/gl/src/: lib.rs
shaders/: voxel.glslv
src/: camera.rs  gui.rs  input.rs  main.rs  math.rs  mesh.rs  render_gl.rs  teapot.rs  voxel.rs
